k8s/gke/sagco-gke.yaml
# SAGCO OS - GKE-Specific Resources
# Google Kubernetes Engine optimizations

---
# GKE-specific Ingress with Google Cloud Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sagco-gke
  namespace: sagco
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "sagco-ip"
    networking.gke.io/managed-certificates: "sagco-certificate"
    kubernetes.io/ingress.allow-http: "false"
    cloud.google.com/backend-config: '{"default": "sagco-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  rules:
  - host: sagco.strategickhaos.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: sagco
            port:
              number: 80
